# aubo-sdk-example

./: README.md
src/: CMakeLists.txt
src/dependents/robotSDK/inc/: AuboRobotMetaType.h
src/example/: example_3.cpp
